Changelog
=========

1.1 - future
------------

* Adjusted tests for Plone 3.3.
  [hannosch]

* Minor adjustment in documentation: a) dont adapt the class in the example,
  b) explain why named adapters are used.
  [jensens]

1.0 - 2008-07-17
----------------

* No changes since 1.0rc1.

1.0rc1 - 2008-04-07
-------------------

* Added optional plone.browserlayer support. Extenders implementing
  IBrowserLayerAwareExtender need to have a layer attribute. Those
  extenders are taken into account only if the specified layer is
  active.
  [jensens] 2008-03-03

1.0b1 - 2007-12-07
------------------

* Schema modifiers implementing ISchemaModifier are now responsible for
  copying fields they modify. See README and the doc strings.
  [fschulze]

* Added a simple benchmark and made some optimizations by avoiding a lot
  of field copying.
  [fschulze, wiggy]

* Use a marker interface instead of overrides.zcml - this means you don't
  need to muck with overrides in dependent products.
  [optilude]

* Added code to allow addition of new schemata. We need an ordered
  dictionary to not bork the order of the schemata.
  [jensens]

* Add a small benchmark utility.
  [wichert]

* Replace the high-level test with unit-tests and extend the test coverage.
  [wichert]

* Rewrite the README to be more human readable.
  [wichert]


1.0a1 - 2007-10-15
------------------

* First public release.
