@@ -4,6 +4,9 @@ Changelog
 1.1 - future
 ------------
 
+* Added a proper interface to the IExtensionField.
+  [hannosch]
+
 * Adjusted tests for Plone 3.3.
   [hannosch]
 
